src/java/algorithm-jna/src/main/java/com/sengled/media/jna/nal_decoder/Nal_decoderLibrary.java

package com.sengled.media.jna.nal_decoder;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import java.nio.ByteBuffer;
/**
 * JNA Wrapper for library <b>nal_decoder</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface Nal_decoderLibrary extends Library {
	public static final String JNA_LIBRARY_NAME = "nal_decoder";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(Nal_decoderLibrary.JNA_LIBRARY_NAME);
	public static final Nal_decoderLibrary INSTANCE = (Nal_decoderLibrary)Native.loadLibrary(Nal_decoderLibrary.JNA_LIBRARY_NAME, Nal_decoderLibrary.class);
	/**
	 * Original signature : <code>void SetLogCallback(void*)</code><br>
	 * <i>native declaration : nal_decoder.h:4</i>
	 */
	void SetLogCallback(Pointer callback);
	/**
	 * Original signature : <code>int Init()</code><br>
	 * <i>native declaration : nal_decoder.h:6</i>
	 */
	int Init();
	/**
	 * Original signature : <code>int DecodeNal(char*, int, const char*, YUVFrame*)</code><br>
	 * <i>native declaration : nal_decoder.h:8</i><br>
	 * @deprecated use the safer methods {@link #DecodeNal(java.nio.ByteBuffer, int, java.lang.String, com.sengled.media.jna.nal_decoder.YUVFrame)} and {@link #DecodeNal(com.sun.jna.Pointer, int, com.sun.jna.Pointer, com.sengled.media.jna.nal_decoder.YUVFrame)} instead
	 */
	@Deprecated 
	int DecodeNal(Pointer data_buffer, int len, Pointer token, YUVFrame yuv_frame);
	/**
	 * Original signature : <code>int DecodeNal(char*, int, const char*, YUVFrame*)</code><br>
	 * <i>native declaration : nal_decoder.h:8</i>
	 */
	int DecodeNal(ByteBuffer data_buffer, int len, String token, YUVFrame yuv_frame);
	/**
	 * Original signature : <code>int Destroy(YUVFrame*)</code><br>
	 * <i>native declaration : nal_decoder.h:10</i>
	 */
	int Destroy(YUVFrame yuv_frame);
}
